ejs JS logic & control in .ejs file

--- a/MoreExpress/EJSDemo/views/love.ejs
+++ b/MoreExpress/EJSDemo/views/love.ejs
@@ -1,5 +1,11 @@
 <h1>You fell in love with: <%= love %></h1>
 
+<% if (love.toLowerCase() === "surfing"){ %>
+    <h3>Surfs up!</h3>
+    <% }else{ %>
+    <h3>What ... you do not like surfing?</h3>
+    <% } %>
+
 <p>PS ... this is the love.ejs file</p>
 
 
