Added dynamic URLs to object passed via render to love.ejs

--- a/MoreExpress/EJSDemo/views/home.ejs
+++ b/MoreExpress/EJSDemo/views/home.ejs
@@ -1,2 +1,6 @@
+<% include partials/header %>
+
 <H1>Awesome Duck Dive</H1>
 <img src="http://surfcabarete.com/wp-content/uploads/2013/02/duckdive.jpeg">
+
+<% include partials/footer %>
