Changes to home.ejs

--- a/MoreExpress/EJSDemo/views/home.ejs
+++ b/MoreExpress/EJSDemo/views/home.ejs
@@ -3,4 +3,4 @@
 <H1>Awesome Duck Dive</H1>
 <img src="http://surfcabarete.com/wp-content/uploads/2013/02/duckdive.jpeg">
 
-<% include partials/footer %>
+<% include partials/footer %>no
