--- a/Back2Blogging/views/edit.ejs
+++ b/Back2Blogging/views/edit.ejs
@@ -1,7 +1,7 @@
 <h1>Edit one blogpost</h1>
 <form action= '/blogs/<%=blog._id %>?_method=PUT' method="POST">
-    <input name="author" placeholder= "<%= blog.author %>" >
-    <input name= "subject" placeholder = "<%= blog.subject %>" >
-    <input name = "description" placeholder= "<%= blog.description %>" >
+    <input name="editedBlog[author]" placeholder= "<%= blog.author %>" >
+    <input name= "editedBlog[subject]" placeholder = "<%= blog.subject %>" >
+    <input name = "editedBlog[description]" placeholder= "<%= blog.description %>" >
 <button>submit</button>
 </form>
