--- a/Auth-Doug/views/login.ejs
+++ b/Auth-Doug/views/login.ejs
@@ -1,6 +1,6 @@
-<h1>Simple Sign-Up Form</h1>
+<h1>Simple Log-in Form</h1>
 
-<form action = "/register" method = "POST">
+<form action = "/login" method = "POST">
     <input name = "username" placeholder="Username" type="text">
     <input name = "password" placeholder="Password (6+ char)" type="password">
     <button>Submit</button>
